# block-palette-compression

./: .gitignore  AGENTS.md  BLOCK_PALETTE_FORMAT.md  BLOCK_PALETTE_FORMAT_ru.md  BLOCK_PALETTE_README.md  BLOCK_PALETTE_README_ru.md  BPAV_FORMAT.md  BPDH_FORMAT.md  BPLM_FORMAT.md  DCT_FORMAT.md  README.md  TEXTURE_CODEC_COMPARISON.md  TEXTURE_CODEC_COMPARISON_ru.md  THIRD_PARTY_NOTICES.md  app.webmanifest  block-palette.css  block-palette.html  bpal-sampler.css  bpal-viewer.css  bpal-viewer.html  bpdh.css  bpdh.html  codec-lab.css  codec-lab.html  cube-bpal-sampler.html  cube.html  dct-compression.css  dct-compression.html  home.css  i18n.css  index.html  package.json  scene-viewer.css  scene-viewer.html  service-worker.js  setup.ps1  style.css  typography.css
.github/workflows/: pages.yml
assets/bpal/: IMG_20260512_194811.bpal  benjamin-sloth-lindgreen-3.85bpp.bplm  clipart-apple.bpal  davide-ragusa-3.32bpp.bplm  landscape-alaska-1.75bpp.bpal  landscape-alaska-bpal-v5.bplm  landscape-alaska-v5+refinement-2.38bpp.bpal  landscape-alaska.bpal  martin-wessely-3.5bpp.bplm  stone-texture-wic-2.08bpp.bpal  stone-texture-wic-2.38bpp.bpal  stone-texture-wic.bplm  veeterzy-82537-1.44bpp.bplm  zugr-2.47bpp.bpal  zugr-3.69bpp.bplm
assets/bpdh/: IMG_20260512_194811.bpdh  daniel-robert-405.bpdh  landscape-alaska.bpdh  manifest.json
assets/dct/: stone-texture-wic-1.5bpp.dctbs2
benchmark/: README.md  __init__.py  corpus-clic.json  corpus.json  metrics.py  requirements.txt  test_cuda_astc_texture_benchmark.py  test_hybrid_bpdh_astc_4bpp_benchmark.py  test_local_palette_packing_benchmark.py  test_metrics.py  texture-datasets.json
benchmark/profile_search/: README.md  compare_centers.js  extended.js  full.js  score.py  search.js
benchmark/results/: bpal-centroid-comparison.md  bpal-optimal-settings-1.5-to-8-bpp.md  bpal-optimal-settings-1.5-to-8-bpp_ru.md  bpal-optimal-settings-2-to-6-bpp.md  bpav-adaptive-blocks-textures.md  bpdi-pattern-dictionary-clic.md  cuda-astc-textures.md  dct-bpal-astc-200.md  dct-grouped-exponents-200.md  dct-large-library-200.md  dct-prototype-library-200.md  hybrid-bpdh-astc-4bpp.md  local-palette-packing.md  specialized-pbr-modes.md  unified-search-guard-200.md
docs/: BLENDER_SCENE_VIEWER.md  DCTBS2_ALGORITHM_ru.md  DCTBS2_CLI.md  DCT_IMPROVEMENT_PLAN_ru.md  HYBRID_BPAL_DCT_PLAN.md  JS_CODEC_RUNTIME.md  SETUP.md  WEBGL2_OPTIMIZATION_PLAN.md
native/bpal5_simd/: .gitignore  CMakeLists.txt  README.md
native/bpal5_simd/include/: bpal5.h  bpal5_cuda.h
native/bpal5_simd/src/: bpal5.c  bpal5_cuda.cu  bpal5_encode_internal.h  bpal5_simd.c  bpal5_simd_avx2.c  bpal5_simd_internal.h  bpal5cudaenc.cu  bpal5dec.c  bpal5enc.c  image_loader.c  image_loader.h  ppm.c  ppm.h
native/bpal5_simd/tests/: benchmark_cpu_variants.py  benchmark_cuda.py  benchmark_serialization.c  test_cuda_roundtrip.cu  test_image_loader.c  test_roundtrip.c  verify-js-compat.js
native/dct_cuda/: CMakeLists.txt  README.md  build.ps1  dctcuda.cu
native/dct_cuda/tests/: verify-js-compat.js
native/win32-directx-viewer/: NativeSceneViewer.sln  NativeSceneViewer.vcxproj  README.md  main.cpp  scene.hlsl.in  scene_format.h
native/win64_demo/: CMakeLists.txt  README.md  build.ps1
native/win64_demo/src/: app.manifest  bpdh_decoder.cpp  bplm_decoder.cpp  codec_internal.h  dctbs2_decoder.cpp  main.cpp  shader_texture.cpp  shader_texture.h  shader_texture_bpdh.cpp  texture_loader.cpp  texture_loader.h  texture_shader.hlsl
native/win64_demo/tests/: codec_tests.cpp  shader_texture_tests.cpp
src/core/: textured-cube-webgl2.js  textured-cube.js
src/dct/: dct-format.js  dct-worker.js
src/decoders/: bpal-texture.js  bpdh-texture.js  dctbs2-texture.js
src/encoders/: codec-encoder-runtime.js
src/hybrid/: bpdh-codec.js  bpdh-format.js  bpdh-worker.js  dct420.js
src/i18n/: en.js  i18n.js  ru.js
src/pages/: block-palette-page.js  bpal-example-catalog.js  bpal-viewer-page.js  bpdh-page.js  codec-comparison-view.js  codec-lab-page.js  cube-bpal-sampler-page.js  (+5 more)
tests/: adaptive-block-format.test.js  adaptive-block-webgl2.test.js  block-palette-codec.test.js  block-palette-format.test.js  block-palette-optimizer.test.js  block-palette-webgl-accelerator.test.js  block-palette-webgl-codec.test.js  block-pattern-dictionary-webgl2.test.js  block-pattern-dictionary.test.js  bpal-texture-decoder.test.js  bpal-viewer-page.test.js  bpdh-codec.test.js  bpdh-page.test.js  bpdi-webgl2-compile.html  bplm-compression-page.test.js  bplm-format.test.js  bplm-webgl-pages.test.js  codec-comparison-view.test.js  codec-lab-page.test.js  cube-default-texture.test.js  cube-grid-layout.test.js  cube-wheel-zoom.test.js  dct-cube-texture.test.js  dct-cuda-cli.test.js  dct-format.test.js  dct-js-cli.test.js  dct-page.test.js  dct-shader.test.js  i18n.test.js  js-codec-runtime.test.js  native-cli-find-settings.test.js  native-scene-texture-streams.test.js  palette-quantizer.test.js  pwa.test.js  run-tests.js  scene-viewer-page.test.js  standard-texture-codecs.test.js  typography.test.js
tools/: benchmark_bpal_adapter.js  benchmark_bpdh_adapter.js  build-blender-scene-assets.py  build-win32-scene-assets.mjs  cuda-smoke-test.cu  cuda_astc_texture_benchmark.py  dct_bpal_astc_benchmark.py  dct_exponent_benchmark.js  dct_large_library_benchmark.js  dct_library_benchmark.js  dctbs2-cli.js  encode-scene-textures.mjs  export-blender-scene.py  generate-bpal-manifest.js  generate-dctbs2-shaders.js  hybrid_bpdh_astc_4bpp_benchmark.py  local_palette_packing_benchmark.py  pattern-dictionary-benchmark.js  pattern-dictionary-clic-benchmark.js  prepare_dct_exponent_corpus.py  prepare_dct_large_texture_corpus.py  serve.js  setup-local-cuda.ps1  setup-texture-benchmark-corpus.ps1  setup-texture-benchmark.ps1  setup-texture-datasets.ps1  specialized_pbr_benchmark.py  summarize_dct_exponent_benchmark.js  summarize_dct_large_library_benchmark.js  texture_codec_benchmark.py  webgl-cpu-gpu-benchmark.html  webgl-cpu-gpu-benchmark.js  webgl2-compression-benchmark-worker.js  webgl2-compression-benchmark.html  webgl2-compression-benchmark.js
(+176 files in other folders)
